# hookline

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  rebar.config  v2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/gp_api/priv/: openapi.yaml
apps/gp_api/src/: gp_api.app.src  (+22 more)
bridge/: docker-compose.yml
c/: Makefile
c/src/: dlq.c  dlq.h  index.c  index.h  ipc.c  ipc.h  main.c  queue.c  queue.h  store.c  store.h
c/tests/: test_store.c
config/: sys.config  vm.args
docs/: GatePulse.postman_collection.json  embedded-mode.md  index.md
docs/openapi/: hookline.yaml
docs/production/: backup.md  checklist.md  ha-deployment.md  postgres-backend.md  readiness-gate.md  secrets-rotation.md  webhook-consumer-guide.md
docs/releases/: v1.1.md  v1.2.md  v1.3.md  v2.0.md  v2.1.md
grafana/dashboards/: README.md  gatepulse.json
helm/gatepulse/: Chart.yaml  values.yaml
helm/hookline/: Chart.yaml
openapi/: openapi.yaml
priv/sql/: 001_initial.sql
prometheus/: alerts.yml
scripts/release/: tag-baseline.sh
sdk/: README.md
sdk/js/: package.json
sdk/python/: pyproject.toml
sdk/python/examples/: basic.py  verify_signature.py
sdk/python/gatepulse/: __init__.py  client.py
sdk/python/hookline/: client.py
sdk/scala/: README.md  build.sbt
test/: e2e.sh  embedded-mode.sh  integration.sh  production-readiness.sh  trace-propagation.sh
(+96 files in other folders)
